updated the html file

--- a/test_html.html
+++ b/test_html.html
@@ -6,6 +6,7 @@
     <title>Test Git </title>
 </head>
 <body>
-        <h1> This is test html file.</h1>
+        <h1> Hellow world!</h1>
+        <h2>This is a sub heading</h2>
 </body>
 </html>
