update name, date, assignment name

--- a/lesson1_Assignemt.html
+++ b/lesson1_Assignemt.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--
+    Sunae Kelly Choung
+    Oct. 3, 2025
+    Lession1 Assignment
+    GDES-021A-77679.
+    -->
+    <title>ASSIGNMENT - Structuring information into a HTML document</title>
 </head>
 <body>
     <h1>This is the Main Heading</h1>
@@ -12,13 +18,13 @@
 <!-- add a long line here -->
 <hr>
     <h2>This is a Sub-Heading</h2>
-    <p>Many long articles have sub-headings so to help you follow the structure of what is being written. There may even be sub-sub-headings (or lower-level headings)
-    <br />
-    What should this be?</p>
+    <p>Many long articles have sub-headings so to help you follow the structure of what is being written. 
+    <br />There may even be sub-sub-headings (or lower-level headings) 
+    <br />What should this be?</p>
 
     <h3>Another Sub-Heading</h3>
-    <p>Here you can see another sub-heading. But should this be a heading? Probably not. Too much info/text now.
-right?</p>
+    <p>Here you can see another sub-heading. But should this be a heading? 
+    <br />Probably not. Too much info/text now. right?</p>
 <br/>
 <br/>
 <!-- add a few "breaks" here to create some space! 
